--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'binary-compatibility-validator'
+
 buildscript {
 
     ext {
@@ -9,6 +10,7 @@ buildscript {
 
     repositories {
         google()
+        maven { url "https://www.jitpack.io" }
         jcenter()
     }
 
@@ -17,20 +19,28 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath 'com.google.gms:google-services:4.3.5'
         classpath 'com.google.firebase:firebase-appdistribution-gradle:2.1.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'org.jetbrains.kotlinx:binary-compatibility-validator:0.5.0'
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
         maven { url "https://www.jitpack.io" }
+        jcenter()
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+apiValidation {
+    ignoredPackages += [
+            'com/jivosite/sdk/support/binding',
+    ]
+
+    ignoredProjects += [
+            'app',
+    ]
 }
