--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 
+ext {
+    PUBLISH_GROUP_ID = 'com.jivosite.sdk'
+    PUBLISH_VERSION = '1.0.0-alpha03'
+    PUBLISH_ARTIFACT_ID = 'android-sdk'
+}
+
+apply from: "${rootProject.projectDir}/scripts/publish-mavencentral.gradle"
+
 android {
     compileSdkVersion sdkVersion
     buildToolsVersion buildTools
@@ -10,7 +18,7 @@ android {
         minSdkVersion 21
         targetSdkVersion sdkVersion
         versionCode 102102141
-        versionName "1.0.0-alpha01"
+        versionName PUBLISH_VERSION
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
