--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,14 @@ buildscript {
     repositories {
         google()
         maven { url "https://www.jitpack.io" }
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath 'com.google.gms:google-services:4.3.5'
-        classpath 'com.google.firebase:firebase-appdistribution-gradle:2.1.0'
+        classpath 'com.google.gms:google-services:4.3.8'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:2.1.2'
         classpath 'org.jetbrains.kotlinx:binary-compatibility-validator:0.5.0'
     }
 }
@@ -27,7 +27,7 @@ allprojects {
     repositories {
         google()
         maven { url "https://www.jitpack.io" }
-        jcenter()
+        mavenCentral()
     }
 }
 
