--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     ext {
         sdkVersion = 30
         buildTools = "30.0.3"
-        kotlinVersion = "1.4.31"
+        ext.kotlinVersion = "1.5.0"
     }
 
     repositories {
