AndroidManifest: add theme for JivoChatActivity

--- a/sdk/src/main/AndroidManifest.xml
+++ b/sdk/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
 
         <activity
             android:name=".ui.chat.JivoChatActivity"
-            android:launchMode="singleInstance"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
 
         <activity
             android:name=".ui.imageviewer.ImageViewerActivity"
