--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -21,7 +21,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
 
-        buildConfigField "String", "VERSION_NAME", "\"${defaultConfig.versionName}\""
+        buildConfigField "String", "VERSION_NAME", "\"$PUBLISH_VERSION\""
         buildConfigField "String", "WSS_DEFAULT_HOST", '"node.jivosite.com:443"'
         buildConfigField "int", "CONNECTION_TIMEOUT", '15000'
         buildConfigField "Long", "PING_INTERVAL", '20000L'
