--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -35,8 +35,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            shrinkResources true
+            minifyEnabled false
         }
     }
 
