add markwon library and support for markdown text

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
     repositories {
         google()
         maven { url "https://www.jitpack.io" }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         mavenCentral()
     }
 }
