--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -115,4 +115,5 @@ dependencies {
 
     implementation 'io.noties.markwon:core:4.6.2'
     implementation 'io.noties.markwon:linkify:4.6.2'
+    implementation 'io.noties.markwon:image:4.6.2'
 }
