MOB-4250: rename text styles

--- a/sdk/src/main/AndroidManifest.xml
+++ b/sdk/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
         <activity
             android:name=".ui.imageviewer.ImageViewerActivity"
-            android:theme="@style/ImageViewerTheme" />
+            android:theme="@style/JivoSDK.ImageViewerTheme" />
 
         <provider
             android:name=".fileprovider.JivoSdkFileProvider"
