--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
     ext {
         sdkVersion = 33
         buildTools = "30.0.3"
+        appVersionName = "1.0.0"
+        appVersionCode = 102305252
         ext.kotlinVersion = "1.7.10"
     }
 
