Gradle: use api instead of implementation for firebase

--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -97,9 +97,8 @@ dependencies {
     implementation 'io.coil-kt:coil-base:1.1.1'
 
     //firebase
-    implementation platform('com.google.firebase:firebase-bom:28.0.1')
-    implementation 'com.google.firebase:firebase-messaging'
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+    api platform('com.google.firebase:firebase-bom:28.0.1')
+    api 'com.google.firebase:firebase-messaging'
 
     //photoView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
