MOB-4950: expand logging

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ android {
     buildTypes {
 
         debug {
+            minifyEnabled false
             debuggable true
             signingConfig signingConfigs.debug
             firebaseAppDistribution {
