--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -114,4 +114,5 @@ dependencies {
 
     implementation 'io.noties.markwon:core:4.6.2'
     implementation 'io.noties.markwon:linkify:4.6.2'
+    implementation 'io.noties.markwon:ext-strikethrough:4.6.2'
 }
