MOB-4924: add sending photo from camera

--- a/sdk/src/main/AndroidManifest.xml
+++ b/sdk/src/main/AndroidManifest.xml
@@ -2,10 +2,11 @@
     package="com.jivosite.sdk">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/full_backup_content">>
+        android:fullBackupContent="@xml/full_backup_content">
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
